Fix padding-right for hvordan section on mobile

--- a/style.css
+++ b/style.css
@@ -355,10 +355,12 @@ button[type="submit"]:hover {
   section {
     padding: 0 1rem;
   }
- section.hvordan {
-    padding-left: 1rem; !important;
-    padding-right: 1rem; !important;
-  }
+ .feature-highlight section.hvordan {
+    padding-left: 1rem;
+    padding-right: 1rem;
+     }
+}
+ 
   .scroll-down-inline {
     display: block;
     margin: 0.5rem auto 0;
